src/app/crm-app/crm-app.component.css
h2 {
    background-color: #666666;
    color: #fff;
}

.form-container {
    max-width: 400px;
    margin: 0px auto;
}

.fa-plus-square:hover {
    cursor: pointer;
}

.contact-container {
    max-width: 500px;
    margin: 0px auto;
}

.contact:hover {
    cursor: pointer;
}

.contact-container i:hover {
    cursor: pointer;
}

.fa-plus-square {
    color: #CD5334;
}

button {
    background-color: #CD5334;
    color: #fff;
    margin-top: 10px;
}

.search-box-container {
    max-width: 400px;
    margin: 0px auto;
}

.edit-form-container {
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
}

.edit-form {
    background-color: rgba(0, 0, 0, 0.9);
    color: #fff;
    width: 100%;
    padding-bottom: 1em;
    max-width: 500px;
}

.id-input {
    display: hidden;
}

.indev-container {
    background-color: rgba(0, 0, 0, 0.5);
    position: absolute;
    width: 100%;
    height: 100%;
    top: 0;
}

.indev-container i:hover {
    cursor: pointer;
}

.indev {
    background-color: rgba(0, 0, 0, 0.9);
    color: #fff;
    width: 100%;
    padding-bottom: 1em;
    max-width: 500px;
}

